<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.taller2_zapatos.Principal">

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="507dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="0.03"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_editor_absoluteY="1dp" />

        <Spinner
            android:id="@+id/cmbSexo"
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.03" />

        <Spinner
            android:id="@+id/cmbTipo"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <Spinner
            android:id="@+id/cmbMarca"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.04" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2.73"
                android:text="@string/cantidad"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_weight="4.64" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.26"
                android:text="@string/precioUnitario"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblPrecioUnitario"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.85"
                android:text="@string/precioTotal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblPrecioTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.71" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="limpiar"
                android:text="@string/limpiar" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calcular"
                android:text="@string/calcular" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
